--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,7 @@ models/
 .venv/
 data/convert_to_csv.py 
 fetal_health.xls
-Dockerfile
-FHC_model_building.py
+backups/
+logs/
+reports/
+uploads/
